# KRCMake

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  code-style-check.yml
cmake/: KRCMakeCompileOptions.cmake  KRCMakeGitInfo.cmake
packaging/: CMakeLists.txt  ProjectConfig.cmake.in
tests/: CMakeLists.txt
tests/dummy/: CMakeLists.txt  main.cpp
tests/target_compile_options/: CMakeLists.txt  c_option.c  c_option.h  cxx_option.cpp  cxx_option.hpp  main.cpp
tests/target_link_options/: CMakeLists.txt
tests/target_set_develop_mode/: CMakeLists.txt  dummy.c  dummy.cpp  main.cpp
tests/target_set_sanitizer/: CMakeLists.txt  main.cpp
